0. Stream API улучшения [#269669] добавление List.of